# lvgl-vita

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: lvgl_vita.h
include/src/: .lv_conf_internal.h.swp
platform/: lv_conf.h  lvgl_vita.c  lvgl_vita.h  psv_port_disp.c  psv_port_disp.h  psv_port_fs.c  psv_port_fs.h  psv_port_input.c  psv_port_input.h
sample/: CMakeLists.txt  main.c
sample/src/: main.c
script/: deploy_sample.sh  header_files_update.sh  lv_conf_update.sh  update_header.sh
